# checkbot

./: README.md  makefile  pyproject.toml
src/: __main__.py  config.py
src/check/: cog.py
src/check/entities/: check.py
src/check/repositories/: check_repository.py  in_memory_check_repository.py
src/check/use_cases/: check.py
src/check/validators/: check_validator.py
src/check/validators/jsonschema/: jsonschema_check_validator.py
src/core/exceptions/: __init__.py
src/core/validator/: __init__.py
src/core/validator/datetime/: is_simple_datetime.py
src/core/validator/jsonschema/: jsonschema_validator.py
src/utils/: jsonschema_validate.py
